--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^2.1.1",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.554.0",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^3.4.0",
     "uuid": "^13.0.0"
   },
